refactor: java 25 clean up and pom clean up